# access-control-system

./: .cproject  .gitignore  .project  LICENSE  cardreader LinkServer Debug hotplug.launch  cardreader LinkServer Debug.launch  cardreader LinkServer Release.launch
acs-server/: _example_redis_dataset.txt  _test_dataset.txt  acs-server.service  acs_server_init_script  build.sh  license.txt  load_test_data.sh  readme.txt  requirements.txt  start.sh  start_verbose.sh
acs-server/redis_files/: acs_redis_config.conf  asc_redis_init_script
acs-server/src/: acs_can_proto.py  acs_database.py  acs_server.py  helpers.py
app/: FreeRTOSConfig.h  acs_can_protocol.h  crp.c  start.c  static_cache.c  static_cache.h  terminal.c  terminal.h  terminal_config.c  terminal_config.h  watchdog.c
bsp/: FreeRTOSConfig.h  board.h  board_config.h  brownout.c  brownout.h  card_reader.c  card_reader.h  panel.c  panel.h  reader.c  reader.h  retarget.h  storage.c  storage.h  terminal.c  terminal.h  terminal_config.h  watchdog.c  watchdog.h  weigand.h
bsp/CANopen/: CAN_Node_Def.c  CAN_Node_Def.h  canopen_driver.c  canopen_driver.h  rom_driver_CAN.h  rom_drivers.h
bsp/board/: board.c  board.h  board_api.h  card_reader.c
bsp/can/: CAN_Node_Def.c  CAN_Node_Def.h  can_term_driver.c  can_term_driver.h  can_term_protocol.h  canopen_driver.c  canopen_driver.h  canterm_driver.c  canterm_driver.h  rom_drivers.h
bsp/watchdog/: watchdog.c
bsp/weigand/: weigand.c  weigand.h
cardreader/: .cproject  .gitignore  .project  CMakeLists.txt  README  acs-panel LinkServer Debug hotplug.launch  acs-panel LinkServer Debug.launch  acs-panel LinkServer Release.launch  build_release_fw.bat  cardreader LinkServer Debug.launch
cardreader/app/: FreeRTOSConfig.h  acs_can_protocol.h  start.c  terminal.c  terminal_config.c  terminal_config.h
cardreader/bsp/: brownout.c  reader.c  reader.h  retarget.h  watchdog.c  watchdog.h
cardreader/bsp/board/: board.c  board.h  board_api.h  board_sysinit.c  cr_startup_lpc11xx.c
cardreader/bsp/can/: can_term_driver.c
cardreader/bsp/weigand/: weigand.c  weigand.h
cardreader/cmake/: acs-panel_Debug.ld  acs-panel_Debug_library.ld  acs-panel_Debug_memory.ld  acs-panel_Release.ld  acs-panel_Release_library.ld  acs-panel_Release_memory.ld  arm-gcc-toolchain.cmake
cardreader/doc/: doc.config
cardreader/freertos/include/: portmacro.h
cardreader/lib/: license.txt
freertos/include/: timers.h
